--- a/contact.html
+++ b/contact.html
@@ -46,8 +46,8 @@
         <div class="contact-info">
             <h3 data-translate="contact.info.title">Бізбен байланысу</h3>
             <p><i class="fas fa-envelope"></i> info@qazarch.kz</p>
-            <p><i class="fas fa-phone"></i> +7 (777) 123-45-67</p>
-            <p><i class="fas fa-map-marker-alt"></i> Нұр-Сұлтан, Қазақстан</p>
+            <p><i class="fas fa-phone"></i> +7 (771) 239 1565</p>
+            <p><i class="fas fa-map-marker-alt"></i> Маңғыстау облысы Мұнайлы ауданы</p>
 
             <div class="partners">
                 <h4 data-translate="contact.partners">Серіктестер:</h4>
